[package]
name = "Speed_Runner_Verfier_Tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
device_query = "1.0.0"
chrono = { version = "0.4.11", feaures = ["serde"] }
serde = "*"
serde_json = "*"
serde_derive = "*"